--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="settings_changeBtn">Ändern</string>
+    <string name="help_text">Informieren Sie sich bei Ihrem Email-Provider um die notwendigen Daten in Erfahrung zu bringen!</string>
 </resources>
